--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^1.7.2",
 		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3",
+		"nanoid": "^5.0.7",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.3",
 		"react-dom": "^18.3.1",
